# WorldCupTracker

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: ADDING_VENUES.md  DEPLOY_GUI.md  DEPLOY_OMV.md
src/worldcup_tracker/: __init__.py  __main__.py  check_result.py  cli.py  config.py  diff.py  env.py  fetcher.py  health.py  models.py  pushover.py  sanity.py  service.py  storage.py
src/worldcup_tracker/parsers/: __init__.py  base.py  big_penny.py  urban_pubs.py
tests/: conftest.py  test_big_penny_parser.py  test_cli.py  test_diff.py  test_env.py  test_health.py  test_parser.py  test_pushover.py  test_pushover_health.py  test_sanity.py  test_service_sanity.py
tests/fixtures/: bar_kick_sample.html  big_penny_sample.html
