[project]
name = "worldcup-tracker"
version = "0.1.0"
description = "Monitor pub/venue pages for World Cup 2026 fixture and booking availability changes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "httpx>=0.28.1,<1",
    "pyyaml>=6.0.2,<7",
    "typer>=0.15.1,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
]

[project.scripts]
worldcup-tracker = "worldcup_tracker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=worldcup_tracker --cov-report=term-missing"

[tool.coverage.run]
source = ["worldcup_tracker"]
omit = ["*/tests/*"]
